Summary of Changes to DuroDBMS

DuroDBMS 1.0

- Statements of the form the_length(the_property(v)) := ... are now supported
  for array-valued properties. 

- Duro D/T now supports a CONST statement.

- The second parameter of aggregate operators SUM, AVG, MAX, MIN, ALL, AND, ANY, OR
  can be an expresssion and is optional if the relation has only one attribute.
  The second argument of RDB_min() etc. is now of type RDB_expression *. 

- Added Duro_rollback_all().

- Made datetime type ordered.

- Fixed bug in RDB_drop_table_index().

- Fixed bug with concurrent access when the first tuple is inserted into a table.

- Added RDB_is_array().

- Added getfn/getarg arguments to RDB_multi_assign(), allowing variables
  in updates.

DuroDBMS 0.26

- Duro D/T: Replaced MODULE by PACKAGE.

- Duro D/T: It is now possible to omit the package name when calling a
  user-defined update operator from another operator that belongs to the same
  package.

- Duro D/T: Updating tuples using t.attr := v is now supported in addition to
  UPDATE t { attr := v }.

- Duro D/T: Added D_INSERT and I_DELETE. RDB_ma_insert and RDB_ma_vdelete
  now contain a flags field which must be initialized when a pointer
  to the respective structure is passed to RDB_multi_assign().

- Duro D/T: Tuple attributes are now allowed as a target in INSERT, D_INSERT,
  DELETE, I_DELETE, and LOAD.

- form_to_tuple() is now in package net.

- If the evaluation of an expression fails Duro D/T no longer retries with
  a transaction to read operators from the catalog.
  Replaced Duro_evaluate_retry() and  Duro_expr_type_retry() by Duro_evaluate()
  and Duro_expr_type().

- Added function Duro_evaluate() which does not start a transaction.

- Changed RDB_add_table() which now takes an optional RDB_database argument.
  Added a db argument to duro::table add.

- Database environments are by default opened with the DB_CREATE flag.

- Dropped RDB_get_update_op_e(). RDB_get_update_op() now has the same signature